knowledge/metadata/sf-pp-main-qa/sf-pp-main-qa/force-app/main/default/objects/pqcrush__Relationship_Map__c/pqcrush__Relationship_Map__c.object-meta.xml
<CustomObject>
    <label>Relationship Map</label>
    <nameField>
        <label>Relationship Map Name</label>
        <type>Text</type>
    </nameField>
    <pluralLabel>Relationship Maps</pluralLabel>
    <sharingModel>ReadWrite</sharingModel>
</CustomObject>