knowledge/metadata/sf-pp-main-qa/sf-pp-main-qa/force-app/main/default/objects/pqcrush__Relationship_Map__c/fields/pqcrush__Map_Member_Count__c.field-meta.xml
<CustomField>
    <fullName>pqcrush__Map_Member_Count__c</fullName>
    <label>Map_Member_Count</label>
    <summaryForeignKey>pqcrush__Relationship_Map_Member__c.pqcrush__Relationship_Map__c</summaryForeignKey>
    <summaryOperation>count</summaryOperation>
    <type>Summary</type>
</CustomField>