knowledge/metadata/sf-pp-main-qa/sf-pp-main-qa/force-app/main/default/objects/pqcrush__Relationship_Map__c/fields/pqcrush__Map_Member_Max_Modified_Date__c.field-meta.xml
<CustomField>
    <fullName>pqcrush__Map_Member_Max_Modified_Date__c</fullName>
    <description>Latest modified date of related map members, used for scoring of account plans if there is a related plan</description>
    <label>Map Member Max Modified Date</label>
    <summarizedField>pqcrush__Relationship_Map_Member__c.LastModifiedDate</summarizedField>
    <summaryForeignKey>pqcrush__Relationship_Map_Member__c.pqcrush__Relationship_Map__c</summaryForeignKey>
    <summaryOperation>max</summaryOperation>
    <type>Summary</type>
</CustomField>