knowledge/metadata/sf-pp-main-qa/sf-pp-main-qa/force-app/main/default/objects/pqcrush__Relationship_Map__c/fields/pqcrush__pq_AccountPlanId__c.field-meta.xml
<CustomField>
    <fullName>pqcrush__pq_AccountPlanId__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <label>pq_AccountPlanId</label>
    <referenceTo>pqcrush__Account_Plan__c</referenceTo>
    <relationshipLabel>Relationship Maps</relationshipLabel>
    <relationshipName>Relationship_Maps</relationshipName>
    <type>Lookup</type>
</CustomField>