knowledge/metadata/sf-pp-main-qa/sf-pp-main-qa/force-app/main/default/objects/pqcrush__Relationship_Map__c/fields/pqcrush__pq_Opportunity_Plan__c.field-meta.xml
<CustomField>
    <fullName>pqcrush__pq_Opportunity_Plan__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <description>An optional relationship to an Opportunity Plan record</description>
    <label>Opportunity Plan</label>
    <referenceTo>pqcrush__PQ_Opportunity_Plan__c</referenceTo>
    <relationshipLabel>Relationship Maps</relationshipLabel>
    <relationshipName>Relationship_Maps</relationshipName>
    <type>Lookup</type>
</CustomField>