knowledge/metadata/sf-pp-main-qa/sf-pp-main-qa/force-app/main/default/objects/pqcrush__Relationship_Map__c/fields/pqcrush__Type_Setting__c.field-meta.xml
<CustomField>
    <fullName>pqcrush__Type_Setting__c</fullName>
    <description>The setting for which this map uses</description>
    <inlineHelpText>The setting for which this map uses</inlineHelpText>
    <label>Type Setting</label>
    <length>255</length>
    <type>Text</type>
</CustomField>